fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@ ul {
 
 
 article {
-    width: 100%;
+    width: 800px;
     background-color: rgb(29, 29, 49);
-    text-align: center;
-    color: floralwhite;
+    /* text-align: center; */
+    
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: auto;
 }
@@ -41,13 +41,27 @@ footer {
     padding: .5rem 1rem;
     text-align: center;
     clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
      
 }
 
 img {
-    
-    width: 10%;
+    float: right;
+    width: 30%;
     height: auto;
     margin-bottom: 1rem;
 }
+
+.article-paragraph {
+    float: left;
+    width: 60%;
+    padding: auto;
+}
+
+.article-title {
+    text-align: center;
+    color: floralwhite;
+}
+
+
 
